Fix contributions alignment

--- a/styles/single_story.scss
+++ b/styles/single_story.scss
@@ -56,7 +56,7 @@
   flex-direction: column;
   width: 100em !important;
   margin-left: 30em;
-  margin-top: -200%;
+  margin-top: -100%;
 }
 
 .contribution-body {
